@@ -1,5 +1,10 @@
 2008-02-13  Mike Krüger <mkrueger@novell.com> 
 
+	* Mono.TextEditor/TextViewMargin.cs: Fixed Bug 361473 - Incorrect placement
+	  of the cursor with mouse click.
+
+2008-02-13  Mike Krüger <mkrueger@novell.com> 
+
 	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextMarker.cs,
 	  Mono.TextEditor/TextEditor.cs: Optimized drawing.
 
